# tglite

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  Makefile  README.md  environment.yml  pyproject.toml  setup.py
_readthedocs/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_readthedocs/html/_sources/: index.rst.txt
_readthedocs/html/_sources/api/python/: tglite.batch.rst.txt  tglite.block.rst.txt  tglite.data.rst.txt  tglite.graph.rst.txt  tglite.mailbox.rst.txt  tglite.memory.rst.txt  tglite.op.rst.txt  tglite.rst.txt  tglite.utils.rst.txt
_readthedocs/html/_sources/install/: index.rst.txt
_readthedocs/html/_sources/tutorial/: tblock.rst.txt  tgat.ipynb.txt
_readthedocs/html/api/python/: index.html  tglite.batch.html  tglite.block.html  tglite.context.html  tglite.data.html  tglite.frame.html  tglite.graph.html  tglite.html  tglite.mailbox.html  tglite.memory.html  tglite.nn.html  tglite.op.html  tglite.sampler.html  tglite.stats.html  tglite.utils.html
_readthedocs/html/install/: index.html
_readthedocs/html/tutorial/: TGAT.html  quickstart.html  quickstart.ipynb  tblock.html  tgat.html
docs/: README.md  requirements.txt  run.sh
docs/source/: conf.py  index.rst
docs/source/_static/: th.css
docs/source/api/python/: index.rst  tglite.block.rst  tglite.context.rst  tglite.frame.rst  tglite.nn.rst  tglite.op.rst  tglite.rst  tglite.sampler.rst  tglite.stats.rst
docs/source/install/: index.rst
docs/source/tutorial/: quickstart.ipynb  tblock.rst
examples/: download-data.sh  gen-data-files.py  requirements.txt  support.py
examples/apan/: apan.py  train.py
examples/exp/: apan-gdelt.sh  apan.sh  jodie-gdelt.sh  jodie.sh  tgat-gdelt.sh  tgat.sh  tgn-gdelt.sh  tgn.sh
examples/jodie/: jodie.py  train.py
examples/tgat/: TGAT.ipynb  tgat.py  train.py
examples/tgn/: tgn.py  train.py
include/tglite/: cache.h  core.h  dedup.h  sampler.h  tcsr.h  utils.h
lib/: bind.cpp  cache.cpp  dedup.cpp  sampler.cpp  tcsr.cpp  utils.cpp
python/tglite/: __init__.py  _batch.py  _block.py  _context.py  _core.py  _frame.py  _graph.py  _mailbox.py  _memory.py  _sampler.py  _stats.py  _utils.py  nn.py  op.py
scripts/: run-exp-large.sh  run-exp-slurm.sh  run-exp.sh  setup-aws.sh  setup-repo.sh
tests/python/: test_block.py  test_frame.py  test_graph.py  test_tglite.py  test_utils.py
tests/python/data/: edges.csv
