[project]
name = "tglite"
dynamic = ["version"]
description = "Temporal GNN Lightweight Framework"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Yufeng Wang", email = "yufengwang05@gmail.com"}
]
maintainers = [
  {name = "Wanyu Zhao", email = "wanyu2@illinois.edu"}
]
keywords = [
  "machine learning", "TGNN"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
]
requires-python = ">=3.7"
dependencies = [
  "torch>=1.12.1",
  "torch-scatter>=2.1.0",
]

[project.optional-dependencies]
dev = ["sphinx"]
test = ["pytest", "pytest-cov"]
docs = ["sphinx_rtd_theme", "nbsphinx"]

[project.urls]
homepage = "https://github.com/ADAPT-uiuc/tglite"
documentation = "https://readthedocs.org"
repository = "https://github.com/ADAPT-uiuc/tglite"
issues = "https://github.com/me/ADAPT-uiuc/tglite/issues"

[tool.setuptools.dynamic]
version = {attr = "tglite.__version__"}

[tool.setuptools.packages.find]
where = ["python"]
include = ["tglite*"]
namespaces = false

[build-system]
requires = ["setuptools>=61.0", "wheel", "torch>=1.12.1"]
build-backend = "setuptools.build_meta"
